welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:6: error: not found: value getHauteur
  while (diag!=getHauteur()-1){
               ^