welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var diag=0
  var y=0
  var x=0
  var compteur=0
  while (diag!=getHauteur()-1){
    for(i<-0 to diag){
      for(j<-0 to i){
        setPos(i,j)
        ecritMessage(compteur)
        compteur+=1
      }
    }
  }
}